--- a/CampusSafetyApp/CampusSafetyApp/CampusSafetyApp.csproj
+++ b/CampusSafetyApp/CampusSafetyApp/CampusSafetyApp.csproj
@@ -84,11 +84,12 @@
     <AndroidResource Include="Resources\layout\Header.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
+    <AndroidResource Include="Resources\layout\EventAlert.axml" />
+    <AndroidResource Include="Resources\layout\EventFAQ.axml" />
+    <AndroidResource Include="Resources\layout\EventHistory.axml" />
+    <AndroidResource Include="Resources\layout\EventMap.axml" />
+    <AndroidResource Include="Resources\layout\EventReport.axml" />
+    <AndroidResource Include="Resources\layout\MainPageNavigation.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
