--- a/CampusSafetyApp/CampusSafetyApp/CampusSafetyApp.csproj
+++ b/CampusSafetyApp/CampusSafetyApp/CampusSafetyApp.csproj
@@ -129,7 +129,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\EventAlert.axml" />
-    <AndroidResource Include="Resources\layout\EventFAQ.axml" />
+    <AndroidResource Include="Resources\layout\EventFAQ.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\EventHistory.axml" />
     <AndroidResource Include="Resources\layout\EventMap.axml" />
     <AndroidResource Include="Resources\layout\EventReport.axml" />
@@ -139,7 +141,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
