Added some fake data to map.

--- a/CampusSafetyApp/CampusSafetyApp/packages.config
+++ b/CampusSafetyApp/CampusSafetyApp/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="monoandroid60" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="monoandroid70" />
   <package id="Plugin.Twitter" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid60" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid60" />
